@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/lapack-reference
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sci-libs/lapack-reference/ChangeLog,v 1.51 2010/10/02 20:49:51 grobian Exp $
+
+  18 Feb 2014; Mark Wright <gienah@gentoo.org> lapack-reference-9999.ebuild,
+  metadata.xml:
+  multibuild lapack-reference when USE=int64 and/or USE=static is specified.
 
 *lapack-reference-3.5.0 (08 Dec 2013)
 
